# deepoo-1

./: .gitignore  LICENSE  README.md  SPECS.md  pyproject.toml  requirements.txt
notebooks/: DeePoo_1_224x224_250811_Quantization.ipynb  DeePoo_1_250810_224x224_frozen_and_unfrozen.ipynb
src/: config.py  evaluate.py  evaluate_tflite.py  export_tflite.py  train.py
src/data/: __init__.py  dataloader.py  merge_datasets.py  preprocess.py
src/model/: __init__.py  deeplab.py  metrics.py
src/utils/: __init__.py
